First shot at a RPM spec file. Edited the program description, the list of files to ignore.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 # usermon
 User Monitor
 
-This is a plugin for the XFCE panel, version 4.12 or higher.
+This is a plugin for the Xfce panel, version 4.12 or higher.
